syntax = "proto3";

option go_package = "./service";

package service;

service Server {
    // Handles client ping/pong communication
    rpc Communicate (stream ClientMessage) returns (stream Ping);

    // Handles friend listener for online status
    rpc FriendListener (stream FriendListenerMessage) returns (stream FriendStatusUpdate);

    // New function to fetch all users from Redis
    rpc GetAllUserInfo (Empty) returns (UserList);
}

message Ping {
    string message = 1; // Ping message content
}

message ClientMessage {
    oneof message {
        ClientHello client_hello = 1;
        Pong pong = 2;
    }
}

// Used for the friend listener connection
message FriendListenerMessage {
    FriendList friend_list = 1;
}

message FriendList {
    repeated string friend_ids = 1; // List of friend IDs to track
}

message FriendStatusUpdate {
    string client_id = 1; // The client whose state changed
    bool is_online = 2;
}

message ClientHello {
    string client_id = 1;
}

message Pong {
    enum Status {
        STATUS_UNKNOWN = 0; 
        STATUS_EVEN = 1; 
        STATUS_ODD = 2; 
    }
    Status status = 1;
}

/// Used for fetching all user infos from elastiCache
message UserInfo {
    string client_id = 1;
    string status = 2;
}

message UserList {
    repeated UserInfo users = 1;
}
///

message Empty {}